# 4students

./: .gitignore  db.sqlite3  faculties.json  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  faculties_data.py  models.py  serializers.py  views.py
main/management/commands/: create_faculty.py
main/migrations/: 0001_initial.py  0002_faculty_alter_user_options_subject_answer.py  0002_rename_content_type_answer_file_type_and_more.py  0003_feedback.py
telegram_bot/: admin.py  loader.py  models.py
telegram_bot/buttons/: reply.py
telegram_bot/handlers/: feedback_handler.py  help_handler.py  language_handler.py  rule_handler.py  start_handler.py  upload_file_handler.py
telegram_bot/images/: image_ids.py
telegram_bot/management/commands/: runbot.py
telegram_bot/messages/: __init__.py  button_message.py  chat_message.py
telegram_bot/migrations/: 0001_initial.py
telegram_bot/orm/: answer.py  feedback.py  user.py
telegram_bot/states/: base_state.py  upload_file_state.py
